<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:id="@+id/prezimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingTop="12dp"
            android:text="@string/imePrezime"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/prezimeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/prezimeTextView"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/prezimeTextView" />

        <TextView
            android:id="@+id/telephoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/prezimeEditText"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:paddingTop="12dp"
            android:text="@string/telephoneNumber"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/telephoneEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prezimeEditText"
            android:layout_alignTop="@+id/telephoneTextView"
            android:inputType="number"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/telephoneTextView" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/telephoneEditText"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:paddingTop="12dp"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prezimeEditText"
            android:layout_alignTop="@+id/emailTextView"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/emailTextView"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailEditText"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:paddingTop="12dp"
            android:text="@string/label_username"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prezimeEditText"
            android:layout_alignTop="@+id/userNameTextView"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/userNameTextView"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/passTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userNameEditText"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="6dp"
            android:paddingTop="12dp"
            android:text="@string/label_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/prezimeEditText"
            android:layout_alignTop="@+id/passTextView"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/passTextView"
            android:inputType="textEmailAddress" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp">

        <CheckBox
            android:id="@+id/registrationCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="8dp"
            android:layout_toRightOf="@+id/registrationCheckBox"
            android:text="@string/prihvacamUvjete"
            android:textSize="16dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/regButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:padding="16dp"
        android:text="@string/endRegistration"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:text="@string/conditions" />


</LinearLayout>